Multipart Request Handled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.data.mongodb.host= localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyFirstDatabase
 spring.data.mongodb.auto-index-creation=true
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
 
 server.port=8081
