--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
+			<artifactId>gson</artifactId>0
 			<version>2.8.4</version>
 		</dependency>
 		<dependency>
@@ -59,6 +59,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+                    <executable>true</executable>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
