--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.data.mongodb.host= localhost
+spring.data.mongodb.host=188.34.163.240
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyFirstDatabase
 spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.uri=mongodb://188.34.163.240:27017
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
+isMongoEnabled=true
 
-server.port=8081
+server.port=8080
